--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">MyApplication-Assignment1</string>
+    <string name="app_name">My Weather APP</string>
+    <string name="Saint_Paul_MN">St. Paul, MN</string>
+    <string name="temperature">72°</string>
+    <string name="feels_like">Feels Like 78°</string>
+    <string name="low">Low 65°</string>
+    <string name="high">High 80°</string>
+    <string name="humidity">Humidity 100%</string>
+    <string name="pressure">Pressure 1023 hPa</string>
+
 </resources>
